# gal

./: .clang-format  .gitignore  .travis.yml  404.html  CMakeLists.txt  LICENSE  README.md  conanfile.txt  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: main.yml
about/: index.html
benchmark/ga-benchmark/: README.md  SpecializedAlgebra.hpp  SpecializedAlgorithmInverseKinematics.hpp  SpecializedProducts.hpp  SpecializedUtils.hpp
benchmarks/: index.html
coding-conventions/: index.html
docs/: about.md  benchmarks.md  coding-conventions.md  draft-evaluation-v2.md  index.md  optimizations.md  quick-start.md
docs/css/: main.css
draft-evaluation-v2/: index.html
optimizations/: index.html
public/gal/: #numeric.hpp#  .#numeric.hpp  algebra.hpp  algorithm.hpp  cga.hpp  cga2.hpp  crc.hpp  dfa.hpp  ega.hpp  engine.hpp  entity.hpp  expr.hpp  expression.hpp  expression_debug.hpp  finite_algebra.hpp  format.hpp  formatters.hpp  ga.hpp  geometric_algebra.hpp  null_algebra.hpp  numeric.hpp  opt.hpp  pga.hpp  pga2.hpp  ring_generator.hpp  stack.hpp  tuple.hpp  vga.hpp
quick-start/: index.html
samples/: CMakeLists.txt  main.cpp
samples/pudding/: CMakeLists.txt  README.md
samples/pudding/public/pudding/: cmd_stream.hpp  device.hpp  image.hpp  image_view.hpp  pudding.hpp  render_target.hpp  renderer.hpp  window.hpp
samples/pudding/public/pudding/detail/: uid.hpp
samples/pudding/src/: cmd_stream.cpp  context.hpp  device.cpp  ensure.hpp  framebuffer.hpp  gc.cpp  gc.hpp  image.cpp  image_view.cpp  log.cpp  log.hpp  pudding.cpp  renderer.cpp  shader.hpp  shader_cache.hpp  swapchain.cpp  swapchain.hpp  uid.cpp  vk_mem_alloc.cpp  window.cpp
search/: search_index.json
src/: CMakeLists.txt  cga.hpp  cga2.hpp  ega.hpp  engine.hpp  finite_algebra.hpp  formatters.hpp  ga.hpp  geometric_algebra.hpp  pga.hpp  pga2.hpp  ring_generator.hpp  utility.hpp
test/: CMakeLists.txt  test.cpp  test_algebra.cpp  test_algorithm.cpp  test_cga.cpp  test_dfa.cpp  test_ega.cpp  test_engine.cpp  test_formatters.cpp  test_ga.cpp  test_ik.cpp  test_pga.cpp  test_pga2.cpp  test_util.hpp  test_vga.cpp
